--- a/binarios.css
+++ b/binarios.css
@@ -18,6 +18,10 @@ p {
     color: white;
     font-size: 22px;
 }
+li {
+    color: #fff;
+    font-size: 20px;
+}
 .intro {
     color: white;
     width: 60%; 
