--- a/pritrimestre.css
+++ b/pritrimestre.css
@@ -4,7 +4,7 @@ body {
     
 }
 h1 {
-    color: #563188;
+    color: #ffffff;
     text-align: center;
     font-size: 55px;
 }
@@ -18,6 +18,9 @@ h2 {
 p {
     color: white;
     font-size: 22px;
+}
+li {
+    color: #fff;
 }
 .intro {
     color: white;
