--- a/octais.css
+++ b/octais.css
@@ -13,6 +13,7 @@ h1 {
 h2 {
     color: white;
     text-align: center; 
+    font-size: 34px;
 }
 p {
     color: white;
@@ -20,6 +21,7 @@ p {
 }
 li {
     color: #fff;
+    font-size: 20px;
 }
 .intro {
     color: white;
