--- a/paginas.css
+++ b/paginas.css
@@ -1,6 +1,3 @@
-html {
-  scroll-behavior: smooth;
-}
 body {
   background-color: #0a001b;
   color: #fff;
@@ -32,26 +29,8 @@ a {
 .imagem {
   position: relative;
 }
-.container {
-  margin-bottom: 1%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-.bemvindo {
-  font-family: "Roboto", sans-serif;
-  font-weight: 100;
-  font-style: normal;
-  display: flex;
-  margin-top: 3%;
-  margin-bottom: 1%;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
 .navegacao ul {
-  margin-top: 2%;
+  margin-top: 13%;
   list-style: none;
   position: absolute;
   left: 0;
@@ -69,61 +48,60 @@ a {
   display: flex;
 }
 
-.introducao {
+.titulo {
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+  display: flex;
+  margin-top: 14%;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.branco {
   background-color: #fff;
   width: 98vw;
   margin: 0;
   margin-top: 3%;
-  border-top-left-radius: 75%;
-  border-top-right-radius: 75%;
-  padding:  20px;
+  border-top-left-radius: 35%;
+  border-top-right-radius: 35%;
+  padding: 40px 20px;
   box-sizing: border-box;
-  text-align: center; 
+  text-align: center;
 }
-
-.introducao h2 {
-  color: black;
-  font-family: "Roboto", sans-serif;
-  font-weight: 800;
-  font-size: 42px;
-  margin-top: 0;
-}
-
-.introducao p {
-  color: black;
-  font-family: "Roboto", sans-serif;
-  font-weight: 800;
-  font-size: 20px;
-  max-width: 800px;
-  margin: 22px auto; 
-}
-
-.fundo {
+.conteudo {
   background-color: #fff;
   width: 98vw;
-  text-align: center; 
+  margin: 0;
+  padding: 40px 20px;
+  box-sizing: border-box;
+  text-align: center;
 }
-
-.fundo h2 {
+.conteudo h2 {
   color: black;
   font-family: "Roboto", sans-serif;
   font-weight: 800;
-  font-size: 42px;
+  font-size: 36px;
   margin-top: 0;
 }
 
-.fundo p {
+.conteudo p {
   color: black;
   font-family: "Roboto", sans-serif;
   font-weight: 800;
-  font-size: 20px;
+  font-size: 24px;
   max-width: 800px;
-  margin: 22px auto; 
+  margin: 20px auto; 
+  
 }
-.fundo ul {
+.conteudo ul {
   font-family: "Roboto", sans-serif;
   font-weight: 800;
-  font-size: 20px;
   list-style-type: none;
+  color: black;
+}
+.conteudo li {
+  margin-bottom: 2%;
+}
+.conteudo a {
   color: black;
 }
